# Data-Storyteller-Quest

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  index.html  metadata.json  package.json  progress.md  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: deploy-cloud-run.yml
.github/workflows/deepagents-planning-todos/assets/examples/todo-driven-agent/: README.md  agent.py  pyproject.toml
.github/workflows/deepagents-planning-todos/assets/todo-structures/: coding-todos.json  research-todos.json
.github/workflows/deepagents-planning-todos/references/: todo-patterns.md
.github/workflows/deepagents-planning-todos/scripts/: visualize_todos.py
.github/workflows/deepagents-setup-configuration/assets/examples/basic-deep-agent/: README.md  agent.py
.github/workflows/deepagents-setup-configuration/assets/templates/deep-agent-simple/: README.md  agent.py  pyproject.toml
.github/workflows/deepagents-setup-configuration/references/: deep-agents-reference.md
.github/workflows/deepagents-setup-configuration/scripts/: init_deep_agent_project.py  validate_deep_agent_config.py
.github/workflows/update-oo-component-documentation/: SKILL.md
.github/workflows/webapp-testing/: SKILL.md
server/: index.js
src/: App.tsx  types.ts
src/data/: scenarios.ts
src/services/: geminiService.ts
